--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.1",
+    "xterm-addon-fit": "^0.5.0",
     "xterm-for-react": "^1.0.4"
   },
   "scripts": {
