--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "dependencies": {
     "@codemirror/lang-javascript": "^0.19.7",
     "@codemirror/theme-one-dark": "^0.19.1",
+    "@rematch/core": "^2.2.0",
+    "@rematch/loading": "^2.1.2",
+    "@rematch/persist": "^2.1.2",
     "@uiw/react-codemirror": "^4.6.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.20",
     "pixi.js": "^6.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^8.0.2",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.0",
     "xterm-addon-fit": "^0.5.0",
     "xterm-for-react": "^1.0.4"
   },
