--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@rematch/loading": "^2.1.2",
     "@rematch/persist": "^2.1.2",
     "@uiw/react-codemirror": "^4.6.0",
+    "bootstrap": "^5.2.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.20",
     "pixi.js": "^6.3.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.1",
     "react-redux": "^8.0.2",
     "react-scripts": "^5.0.1",
