--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "electron": "6.0.12",
     "electron-builder": "21.2.0",
     "husky": "^1.3.1",
+    "mkdirp": "^1.0.4",
     "prettier": "2.2.1",
     "pretty-quick": "^1.10.0"
   }
