--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@uiw/react-codemirror": "^4.6.0",
     "bootstrap": "^5.2.0",
     "classnames": "^2.2.6",
+    "jszip": "^3.10.1",
     "lodash": "^4.17.20",
     "pixi.js": "^6.3.0",
     "react": "^17.0.1",
