--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "xterm-addon-fit": "^0.5.0",
-    "xterm-for-react": "^1.0.4"
+    "xterm-for-react": "^1.0.4",
+    "yaml": "^2.1.1"
   },
   "scripts": {
     "start": "npm run web",
