--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "husky": "^1.3.1",
     "mkdirp": "^1.0.4",
     "prettier": "2.2.1",
-    "pretty-quick": "^1.10.0"
+    "pretty-quick": "^1.10.0",
+    "rimraf": "^3.0.2"
   }
 }
