--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@uiw/react-codemirror": "^4.6.0",
     "bootstrap": "^5.2.0",
     "classnames": "^2.2.6",
+    "connected-react-router": "^6.9.3",
+    "history": "^5.3.0",
     "jszip": "^3.10.1",
     "lodash": "^4.17.20",
     "pixi.js": "^6.3.0",
@@ -19,6 +21,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "xterm-addon-fit": "^0.5.0",
