--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@codemirror/lang-javascript": "^0.19.7",
     "@codemirror/theme-one-dark": "^0.19.1",
+    "@pixi/layers": "^1.0.11",
     "@rematch/core": "^2.2.0",
     "@rematch/loading": "^2.1.2",
     "@rematch/persist": "^2.1.2",
@@ -15,6 +16,7 @@
     "history": "^4.10.1",
     "jszip": "^3.10.1",
     "lodash": "^4.17.20",
+    "pixi-lights": "^3.0.0",
     "pixi.js": "^6.3.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.5.0",
