--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "history": "^4.10.1",
     "jszip": "^3.10.1",
     "lodash": "^4.17.20",
+    "pixi-filters": "^4.2.0",
     "pixi-lights": "^3.0.0",
     "pixi.js": "^6.3.0",
     "react": "^17.0.1",
