--- a/src/data/levels/000_Getting started/000_Introduction/chat/es.yml
+++ b/src/data/levels/000_Getting started/000_Introduction/chat/es.yml
@@ -71,6 +71,9 @@ woo:
 javascript:
   messages:
   - eso va a funcionar
-  - solo necesitas saber algo de programación orientada a objetos
+  - "pero también necesitas conocimientos básicos de:"
+  - "  - aritmética de bits"
+  - "  - sistemas numéricos binario y hexadecimal"
+  - "  - programación orientada a objetos"
   responses:
   - ok, hagámoslo [end]
