Changing NEEES game in tutorial

--- a/src/data/levels/000_Getting started/001_Tutorial/chat/en.yml
+++ b/src/data/levels/000_Getting started/001_Tutorial/chat/en.yml
@@ -37,8 +37,8 @@ tv:
 turnontv:
   messages:
   - there you go...
-  - "a video of a popular NEEES game: Darío"
-  - a weird story about a plumber, and mushrooms 🤨
+  - "a clip of a popular NEEES game: Monkey Conga"
+  - a weird story about a monkey kidnapping your girlfriend 🤨
   responses:
   - ...main
 
