--- a/src/data/levels/000_Getting started/001_Tutorial/chat/es.yml
+++ b/src/data/levels/000_Getting started/001_Tutorial/chat/es.yml
@@ -37,8 +37,8 @@ tv:
 turnontv:
   messages:
   - ahí tienes...
-  - "un video de un juego popular de NEEES: Darío"
-  - una historia rara sobre un plomero, y hongos 🤨
+  - "un video de un juego popular de NEEES: Monkey Conga"
+  - una historia rara sobre un mono secuestrando a tu novia 🤨
   responses:
   - ...main
 
