--- a/src/data/levels/000_Getting started/001_Tutorial/chat/en.yml
+++ b/src/data/levels/000_Getting started/001_Tutorial/chat/en.yml
@@ -32,7 +32,14 @@ tv:
   - it'll be of great help for opening multimedia files
   - or running our emulator 👀
   responses:
+  - cool [whatelse]
   - can you turn it on? 🤔 [turnontv]
+
+whatelse:
+  messages:
+  - what else would you like to know?
+  responses:
+  - ...main
 
 turnontv:
   messages:
