Creating communication between chat <-> components

--- a/src/data/levels/000_Getting started/001_Tutorial/chat/en.yml
+++ b/src/data/levels/000_Getting started/001_Tutorial/chat/en.yml
@@ -42,6 +42,8 @@ whatelse:
   - ...main
 
 turnontv:
+  run: |
+    {{Right}}.load("monkey-conga.webp")
   messages:
   - there you go...
   - "a clip of a popular NEEES game: Monkey Conga"
