--- a/src/data/levels/000_Getting started/001_Tutorial/chat/es.yml
+++ b/src/data/levels/000_Getting started/001_Tutorial/chat/es.yml
@@ -42,6 +42,8 @@ whatelse:
   - ...main
 
 turnontv:
+  run: |
+    {{Right}}.load("monkey-conga.webp")
   messages:
   - ahí tienes...
   - "un video de un juego popular de NEEES: Monkey Conga"
