--- a/src/data/levels/000_Getting started/001_Tutorial/chat/es.yml
+++ b/src/data/levels/000_Getting started/001_Tutorial/chat/es.yml
@@ -32,14 +32,7 @@ tv:
   - va a ser de gran ayuda para abrir archivos multimedia
   - o correr nuestro emulador 👀
   responses:
-  - genial [whatelse]
-  - ¿puedes encenderla? 🤔 [turnontv]
-
-whatelse:
-  messages:
-  - ¿qué más te gustaría saber?
-  responses:
-  - ...main
+  - ¿puedes encenderla? 😮 [turnontv]
 
 turnontv:
   run: |
