--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "archiver": "^5.3.1",
     "chai": "^4.2.0",
     "concurrently": "^5.3.0",
