--- a/src/data/levels/000_Getting started/002_Architecture/chat/en.yml
+++ b/src/data/levels/000_Getting started/002_Architecture/chat/en.yml
@@ -6,10 +6,57 @@ main:
   - so... apparently, this thing has 3 main components that work pretty much independently from each other
   - "these are: 💻  CPU, 🖥️  PPU, and 🔊  APU"
   - in order to play games, you must connect two pieces of hardware
-  - a cartridge (the game itself!) and a 8-button gamepad
+  - a cartridge (the game itself!) and an 8-button gamepad
   responses:
-  - 💻  tell me about the CPU [end]
-  - 🖥️  tell me about the PPU [end]
-  - 🔊  tell me about the APU [end]
-  - 💾  tell me about the cartridges [end]
-  - ok [end]
+  - (k) 💻  tell me about the CPU [cpu]
+  - (k) 🖥️  tell me about the PPU [ppu]
+  - (k) 🔊  tell me about the APU [apu]
+  - (d) what's the best way to start? [start]
+
+cpu:
+  messages:
+  - it's the Central Processing Unit
+  - reads a game's code and executes its instructions
+  - like the one in your computer, but *several* times slower
+  - it has access to a 2KiB bank of WRAM (Work RAM)
+  responses:
+  - and where's the game's code? [thecode]
+  - ...main
+
+thecode:
+  messages:
+  - in the cartridge!
+  - specifically, in a chip called PRG-ROM (Program ROM)
+  responses:
+  - ...main
+
+ppu:
+  messages:
+  - it's the Picture Processing Unit
+  - draws graphics by putting pixels on the screen
+  - and it has access to a 2KiB bank of VRAM (Video RAM)
+  responses:
+  - and where are those graphics located? [thegraphics]
+  - ...main
+
+thegraphics:
+  messages:
+  - in the cartridge! :)
+  - specifically, in a chip called CHR-ROM (Character ROM)
+  responses:
+  - ...main
+
+apu:
+  messages:
+  - it's the Audio Processing Unit
+  - handles sound, producing audio waves
+  - I'm still learning about this one
+  responses:
+  - ...main
+
+start:
+  messages:
+  - we'll first study the cartridges
+  - are you ready?
+  responses:
+  - let's go [end]
