--- a/src/data/levels/000_Getting started/002_Architecture/chat/en.yml
+++ b/src/data/levels/000_Getting started/002_Architecture/chat/en.yml
@@ -11,7 +11,7 @@ main:
   - (k) 💻  tell me about the CPU [cpu]
   - (k) 🖥️  tell me about the PPU [ppu]
   - (k) 🔊  tell me about the APU [apu]
-  - (d) what's the best way to start? [start]
+  - (l) what's the best way to start? [start]
 
 cpu:
   messages:
