Adding example program level

--- a/src/data/levels/000_Getting started/002_Architecture/chat/en.yml
+++ b/src/data/levels/000_Getting started/002_Architecture/chat/en.yml
@@ -56,7 +56,7 @@ apu:
 
 start:
   messages:
-  - we'll first study the cartridges
+  - we'll first study the assembly language
   - are you ready?
   responses:
   - let's go [end]
