--- a/package.json
+++ b/package.json
@@ -2,36 +2,6 @@
   "name": "emudevz",
   "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "@codemirror/lang-javascript": "^0.19.7",
-    "@codemirror/theme-one-dark": "^0.19.1",
-    "@fancyapps/ui": "^4.0.31",
-    "@pixi/layers": "^1.0.11",
-    "@rematch/core": "^2.2.0",
-    "@rematch/loading": "^2.1.2",
-    "@rematch/persist": "^2.1.2",
-    "@uiw/react-codemirror": "^4.6.0",
-    "bootstrap": "^5.2.0",
-    "classnames": "^2.2.6",
-    "connected-react-router": "^6.9.3",
-    "history": "^4.10.1",
-    "jszip": "^3.10.1",
-    "lodash": "^4.17.21",
-    "pixi-filters": "^4.2.0",
-    "pixi-lights": "^3.0.0",
-    "pixi.js": "^6.3.0",
-    "react": "^17.0.1",
-    "react-bootstrap": "^2.5.0",
-    "react-dom": "^17.0.1",
-    "react-icons": "^4.4.0",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^5.3.3",
-    "react-scripts": "^5.0.1",
-    "redux": "^4.2.0",
-    "xterm-addon-fit": "^0.5.0",
-    "xterm-for-react": "^1.0.4",
-    "yaml": "^2.1.1"
-  },
   "scripts": {
     "start": "npm run web",
     "dev": "npm run web",
@@ -48,6 +18,40 @@
     "react-scripts": "react-scripts",
     "build:ghpages": "cross-env GENERATE_SOURCEMAP=false PUBLIC_URL=/emudevz react-scripts build",
     "build:electron": "cross-env GENERATE_SOURCEMAP=false PUBLIC_URL=./ react-scripts build"
+  },
+  "//": [
+    "[!] Packages with fixed versions are conflictive. Do not update them."
+  ],
+  "dependencies": {
+    "@codemirror/language": "6.1.0",
+    "@codemirror/theme-one-dark": "6.1.0",
+    "@fancyapps/ui": "^4.0.31",
+    "@pixi/layers": "^1.0.11",
+    "@rematch/core": "^2.2.0",
+    "@rematch/loading": "^2.1.2",
+    "@rematch/persist": "^2.1.2",
+    "@uiw/codemirror-extensions-langs": "4.12.3",
+    "@uiw/react-codemirror": "4.11.6",
+    "bootstrap": "^5.2.0",
+    "classnames": "^2.2.6",
+    "connected-react-router": "^6.9.3",
+    "history": "^4.10.1",
+    "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
+    "pixi-filters": "^4.2.0",
+    "pixi-lights": "^3.0.0",
+    "pixi.js": "^6.3.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^5.3.3",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.0",
+    "xterm-addon-fit": "^0.5.0",
+    "xterm-for-react": "^1.0.4",
+    "yaml": "^2.1.1"
   },
   "main": "desktop.js",
   "build": {
