--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "history": "^4.10.1",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
+    "nes-emu": "^1.0.3",
     "pixi-filters": "^4.2.0",
     "pixi-lights": "^3.0.0",
     "pixi.js": "^6.3.0",
