--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bootstrap": "^5.2.0",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.9.3",
+    "eventemitter3": "^4.0.7",
     "history": "^4.10.1",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
