Starting chat states with no responses

--- a/src/data/levels/001_Assembly language/000_Example program/chat/en.yml
+++ b/src/data/levels/001_Assembly language/000_Example program/chat/en.yml
@@ -1,6 +1,12 @@
 ---
 main:
+  on-play: |
+    goTo("lda");
   messages:
-  - coming soon
-  responses:
-  - ok [end]
+  - well, now press the play button...
+  responses: []
+
+lda:
+  messages:
+  - see? re piola
+  responses: []
