Chat scripts now are able to call bus events

--- a/src/data/levels/001_Assembly language/000_Example program/chat/en.yml
+++ b/src/data/levels/001_Assembly language/000_Example program/chat/en.yml
@@ -1,7 +1,9 @@
 ---
 main:
+  run: |
+    // bus.emit("run-enabled", false)
   on-play: |
-    goTo("lda");
+    goTo("lda")
   messages:
   - well, now press the play button...
   responses: []
