Starting assembly language level

--- a/src/data/levels/000_Getting started/001_Tutorial/chat/es.yml
+++ b/src/data/levels/000_Getting started/001_Tutorial/chat/es.yml
@@ -36,7 +36,7 @@ tv:
 
 turnontv:
   run: |
-    {{Right}}.load("monkey-conga.webp")
+    {{Right}}.load("monkey-conga.webp");
   messages:
   - ahí tienes...
   - "un video de un juego popular de NEEES: Monkey Conga"
