--- a/src/data/levels/000_Getting started/001_Tutorial/chat/en.yml
+++ b/src/data/levels/000_Getting started/001_Tutorial/chat/en.yml
@@ -36,7 +36,7 @@ tv:
 
 turnontv:
   run: |
-    {{Right}}.load("monkey-conga.webp")
+    {{Right}}.load("monkey-conga.webp");
   messages:
   - there you go...
   - "a clip of a popular NEEES game: Monkey Conga"
