--- a/src/data/levels/000_Getting started/002_Architecture/chat/en.yml
+++ b/src/data/levels/000_Getting started/002_Architecture/chat/en.yml
@@ -1,7 +1,7 @@
 ---
 main:
   run: |
-    {{Right}}.load("architecture.png")
+    {{Right}}.load("architecture.png");
   messages:
   - so... apparently, this thing has 3 main components that work pretty much independently from each other
   - "these are: 💻  CPU, 🖥️  PPU, and 🔊  APU"
